<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <plurals name="possible_exposure_subheading">
    <item quantity="one">You were near someone %1$d day ago who has shared their positive COVID-19 test result.</item>
    <item quantity="other">You were near someone %1$d days ago who has shared their positive COVID-19 test result.</item>
  </plurals>
  <string name="app_name">Sample Public Health Authority App</string>
  <string name="btn_start">Get started</string>
  <string name="btn_turn_on">Turn on</string>
  <string name="btn_done">Done</string>
  <string name="btn_not_now">Not now</string>
  <string name="generic_error_message">Internal error, please try again.</string>
  <string name="onboarding_welcome_text">Welcome to the Exposure Notifications Android</string>
  <string name="onboarding_start_text">
    [Actual copy to be provided by Public Health Authority]\n\n
  </string>
  <string name="onboarding_opt_in_title">Turn on COVID-19 Exposure Notifications</string>
  <string name="onboarding_opt_in_text">
    This app is designed to notify you if you\'ve been exposed to a user who later reports themselves as testing positive for COVID-19. You can choose to turn off these notifications at any time.
    \n\nExposure notifications rely on the sharing and collecting of random IDs. These IDs are a random string of numbers that won\'t identify you to other users and change many times a day to protect your privacy.
    \n\nYour device will collect and share random IDs with nearby devices.
    \n\nIf you’re exposed, the time, approximate date, and distance of your exposure are shared with this app and Government. This helps health experts better understand the spread of COVID-19. These details aren’t associated with your random IDs to protect your privacy.
  </string>
  <string name="onboarding_finish_title">Setting up finished, stay safe!</string>
  <string name="onboarding_finish_message">
    \n\nIf you have a positive COVID-19 test result, sharing this information will help notify others who have been exposed. This will help others in your community contain the spread of COVID-19.
    \n\nA positive COVID-19 test result isn\'t reported automatically. This app lets you report your positive test result securely and without identifying you to other users.
  </string>
  <string name="notify_turn_on_exposure_notifications_header">You can\'t share your positive test results until exposure notifications are turned on</string>
  <string name="turn_on_exposure_notifications_action">Turn on Exposure Notifications</string>
  <string name="exposure_notifications_are_turned_off">Exposure notifications are turned off</string>
  <string name="exposure_notifications">Exposure notifications</string>
  <string name="past_exposures">Past exposures</string>
  <string name="actual_copy">[Actual copy to be provided by Public Health Authority]</string>
  <string name="possible_exposure">Possible exposure</string>
  <string name="no_exposures">No exposures</string>
  <string name="on">On</string>
  <string name="off">Off</string>
  <string name="home_tab_exposures_text">Exposures</string>
  <string name="home_tab_notify_text">Report Positive Result</string>
  <string name="home_tab_notify_debug_text">Debug</string>
  <string name="btn_next">Next</string>
  <string name="btn_cancel">Cancel</string>
  <string name="navigate_up">Navigate up</string>
  <string name="exposure_about_title">Exposure notifications</string>
  <string name="exposure_about_description">[Actual copy to be provided by Public Health Authority]</string>
  <string name="exposure_about_settings_button_pre_text">You can manage exposure notifications in your device’s settings.</string>
  <string name="exposure_about_settings_button_text">Settings</string>
  <string name="exposure_about_detail">
    These notifications are designed to notify you if you\'ve been exposed to a user who later reports themselves as testing positive for COVID-19. You can choose to turn off these notifications at any time.
    \n\nExposure notifications rely on the sharing and collecting of random IDs. These IDs are a random string of numbers that won\'t identify you to other users and change many times a day to protect your privacy.
    \n\nYour device will collect and share random IDs with nearby devices. This app can notify you if you\'ve been near someone who has reported a positive COVID-19 test result.
    \n\nIf you test positive for COVID-19, you can help your community by reporting your test result.
    \n\nIf you\'re exposed, the time, approximate date, and distance of your exposure are shared with this app. This helps health experts better understand the spread of COVID-19.
  </string>
  <string name="exposure_learn_more_title">About possible exposure</string>
  <string name="exposure_learn_more_description"> </string>
  <string name="verify_test_result_title">Enter your test result information</string>
  <string name="verify_test_result_subtitle">Only those who have been exposed will receive a notification</string>
  <string name="enter_your_test_identifier">Test identifier</string>
  <string name="share_test_identifier_help">The unique test identifier that came with your COVID-19 test must be used to verify your positive test result.</string>
  <string name="test_date_label">Date of test</string>
  <string name="share_test_date_help">The test date helps the app know when you may have been contagious and notify the right people of possible exposure.</string>
  <string name="share_error">Unable to share</string>
  <string name="share_complete_title">Thank you for sharing your test result</string>
  <string name="share_complete_detail">[Actual copy to be provided by Public Health Authority]</string>
  <string name="share_not_complete_title">Test result not shared</string>
  <string name="share_not_complete_detail">[Actual copy to be provided by Public Health Authority]</string>
  <string name="share_not_complete_description">Your test result wasn\'t shared. This test result is saved in the app. You can share or delete your test result at any time.</string>
  <string name="share_test_result">Share positive test result</string>
  <string name="share_test_result_title">Share your positive test result</string>
  <string name="share_test_result_description">If you have tested positive for COVID-19, sharing your test result will help notify others who may have been exposed. This will let others in your community know if they should monitor for symptoms.</string>
  <string name="share_begin_title">Before you get started</string>
  <string name="share_begin_detail">[Actual copy to be provided by Public Health Authority]</string>
  <string name="share_begin_description">
    If you have tested positive for COVID-19, you can help your community by reporting your test result.
    \n\nYou\'ll be asked to share your phone\'s random IDs from the past 14 days. This is used to help notify others you\'ve been near about potential exposure.
    \n\nSharing your random IDs won\'t identify you to other users.
  </string>
  <string name="share_learn_more_title">About test identifiers</string>
  <string name="share_learn_more_description">
    Test Identification Numbers can be obbtained by consulting the necessary health authorities,
    Even when a health worker shares your Identification Number never share it with anyone else.
  </string>
  <string name="share_review_title">Review your information</string>
  <string name="share_review_description">[Actual copy to be provided by Public Health Authority]</string>
  <string name="share_review_positive_test">Positive test result</string>
  <string name="share_review_positive_test_covid">COVID-19</string>
  <string name="share_review_date">Date of test</string>
  <string name="btn_share_positive">Share positive test result</string>
  <string name="btn_share_already_shared">Test result shared</string>
  <string name="btn_delete_positive">Delete test result</string>
  <string name="dialog_delete_positive_test_title">Delete test result?</string>
  <string name="dialog_delete_positive_test_description">Your test result will be deleted from this app</string>
  <string name="dialog_delete_positive_test_action">Delete</string>
  <string name="positive_test_results">Staging</string>
  <string name="no_positive_test_results">No positive test results</string>
  <string name="positive_test_result_status_shared">Shared</string>
  <string name="positive_test_result_status_not_shared">Not shared</string>
  <string name="positive_test_shared_title">Shared COVID-19 test result</string>
  <string name="positive_test_not_shared_title">COVID-19 test result</string>
  <string name="positive_test_description">[Actual copy to be provided by Public Health Authority]</string>
  <string name="debug_master_switch">Exposure Notifications API Master</string>
  <string name="debug_test_exposure_category">Test exposure notification</string>
  <string name="debug_test_exposure_description">This will notify the app that you have been exposed so you can see the exposure experience in the app UI until you reset.</string>
  <string name="debug_test_exposure_notify_button_text">Add test exposures</string>
  <string name="debug_exposure_reset_button_text">Reset exposures</string>
  <string name="debug_test_exposure_reset_success">Done</string>
  <string name="debug_matching_category">Matching</string>
  <string name="debug_provide_keys_description">This will enqueue a background job to provide test diagnosis keys into the exposure notifications API from the server.</string>
  <string name="debug_provide_keys_button_text">Provide From Server</string>
  <string name="debug_provide_keys_enqueued">Enqueued background job</string>
  <string name="debug_network_mode">Enable Diagnosis Key Up/Downloads</string>
  <string name="debug_network_mode_category">Diagnosis Key Server</string>
  <string name="debug_network_mode_description">This enables this app to share diagnosis keys with a test server. When disabled, the app does not upload or download keys.</string>
  <string name="debug_network_mode_default_uri">App was built with default URIs. Non-default URIs are required to use servers.</string>
  <string name="about_exposure_description">
    Your phone has detected that it has been near a person who has been tested positive for COVID-19. There is absolutely no need to panic. Health authorities have already obtained this information and a contact shall be initiated to provide you counselling and the required steps needed.
    \n\nWhile that being said please confine yourself to your house and please avoid contact with other persons until regular instructions have been provided by the respective health authorities.
    \n\nIf assistance has not been reached, and waiting seems boring, please don\'t hesistate to call the number below:
  </string>
  <string name="possible_exposure_on">Possible exposure on:</string>
  <string name="dial_covid_19_helpdesk">Dial COVID-19 helpdesk</string>
  <string name="enter_your_phone_number">Enter your phone number</string>
  <string name="phone_number">Phone number</string>
  <string name="phone_number_verification_help">
    Your phone number shall not be shared with others but shall be shared with healthcare workers if a resonable exposure has been detected by your phone. Till then phone number shall not be shared with anyone and shall not even be broadcast to the server.
    \n\nTo prevent the server from recording your phone number, this app has automatic phone number recognisation - this app sends an OTP as an sms from this phone to the above number. The app then can verify the phone number by checking the OTP and the phone number pair without a third party or even a server
    \n\n\Please use a correct phone number. Standard SMS rates apply for verification.
  </string>
  <string name="send_otp">Send OTP</string>
</resources>