<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~ Modifications Copyright 2020 Abishek V Ashok
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingHorizontal="@dimen/padding_large"
  android:orientation="vertical">
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="36dp"
    android:gravity="center"
    android:text="@string/enter_your_phone_number"
    android:textAppearance="?attr/textAppearanceHeadline4" />

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/text_field_phone_number"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/phone_number"
      android:importantForAutofill="no"
      android:inputType="phone" />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?attr/textAppearanceBody1"
    android:layout_marginTop="@dimen/padding_normal"
    android:text="@string/phone_number_verification_help" />
  <Button
    android:id="@+id/verify_phone_number_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginHorizontal="@dimen/padding_normal"
    android:text="@string/send_otp" />
</LinearLayout>