<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~ Modifications Copyright 2020 Abishek V Ashok
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/watermark_frame"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize">

      <ImageButton
        android:id="@android:id/home"
        style="?attr/borderlessButtonStyle"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="?attr/homeAsUpIndicator" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:isScrollContainer="false"
      android:fillViewport="true">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_large">

        <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/exposure_learn_more_title"
          android:textAppearance="?attr/textAppearanceHeadline4" />
        <TextView
          android:id="@+id/textview_exposure_timestamp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          android:text="@string/possible_exposure_on"
          android:textAppearance="?attr/textAppearanceBody1" />
        <TextView
          android:id="@+id/textView_timestamp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          android:text="@string/about_exposure_description"
          android:textAppearance="?attr/textAppearanceBody1"/>
        <Button
          android:id="@+id/call_helpline"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/dial_covid_19_helpdesk"
          android:layout_marginTop="24dp"
          android:layout_gravity="center_horizontal"
          style="?attr/materialButtonOutlinedStyle" />

      </LinearLayout>

    </androidx.core.widget.NestedScrollView>

  </LinearLayout>

</FrameLayout>